# verification_for_dummies

./: .gitignore  404.html  Cargo.toml  Makefile  README.md  book.toml  index.html  print.html  searchindex.js  searchindex.json  todo.md
.github/workflows/: deploy.yml  test.yml
bmc/: index.html
bmc/code/: sw_actlit_1.smt2  sw_actlit_1.smt2.out  sw_init_1.smt2  sw_unroll_1.smt2
conclusion/: index.html
induction/: index.html
induction/code/: sw_base_1.smt2
manage/: Cargo.toml
manage/src/: build.rs  error.rs  lib.rs  main.rs
mikino_bmc/: index.html
mikino_bmc/code/: sw_1.mkn  sw_2.mkn.out  sw_3.mkn.out
mikino_induction/: index.html
mikino_induction/code/: sw_2.mkn.out
mikino_install/: index.html
preface/: index.html
preface/code/: demo.rs
rsc/: stopwatch_1.rs  stopwatch_2.rs
smt/: index.html  mikino.html
smt/code/: ex_1.hsmt.out  ex_1.smt2  ex_2.hsmt  ex_2.smt2.out  ex_3.hsmt  ex_4.smt2.out  ex_5.hsmt.out  ex_5.smt2.out
src/: SUMMARY.md  readme.md
src/bmc/: readme.md
src/bmc/code/: sw_init_1.smt2.out  (+2 more)
src/conclusion/: readme.md
src/induction/: readme.md
src/mikino_bmc/: readme.md
src/mikino_induction/: readme.md
src/mikino_install/: readme.md
src/preface/: readme.md
src/smt/: mikino.md  readme.md
src/strength/: readme.md
src/trans/: readme.md
src/trans_smt/: readme.md
strength/: index.html
strength/code/: split_0_0.mkn  split_0_1.mkn  split_0_1.mkn.out  split_2.mkn
trans/: index.html
trans/code/: sw_1.rs
trans_smt/: index.html
trans_smt/code/: def_fun_demo.smt2  def_fun_demo.smt2.out  sw_trans_2.smt2.out
(+35 files in other folders)
