[package]
name = "manage_api"
version = "0.1.0"
edition = "2018"
# build = "src/build.rs"

[[bin]]
name = "manage"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "^0.12"
log = "^0.4"
clap = "^2.33"

[dependencies.simple_logger]
version = "^1.13"
default-features = false
features = ["colors"]
